Don't order JSRs by their number
JSRs cannot be ordered chronologically by their JSR number.

For instance for JMS where JSR 343 succeeds JSR 914.